docs/eks-skeleton/k8s/istio/peer-authentication.yaml
# mTLS STRICT 모드 - 네임스페이스 전체 적용
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: default
spec:
  mtls:
    mode: STRICT
---
# 모니터링 네임스페이스도 mTLS 적용
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: monitoring
spec:
  mtls:
    mode: STRICT
